devops/k8s/service.portfolio.yaml
apiVersion: v1
kind: Service
metadata:
  name: portfolio
spec:
  type: NodePort
  selector:
    app: portfolio
  ports:
    - protocol: TCP
      port: 4100
      targetPort: 4100
      nodePort: 30001
