devops/k8s/ingress.portfolio.yaml
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: ingress-portfolio
# spec:
#   ingressClassName: nginx
#   rules:
#     - host: rrivas.usaly.co
#       http:
#         paths:
#           - path: /
#             pathType: Prefix
#             backend:
#               service:
#                 name: portfolio
#                 port:
#                   number: 4100

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-portfolio
spec:
  ingressClassName: nginx
  rules:
  - host: rrivas.usaly.co
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: portfolio
            port:
              number: 4100
